@startuml

skinparam classAttributeIconSize 0
hide empty attributes

package "<<aggregate>> ProposalTemplate" {
    class ProposalTemplate <<entity>> {
    }

    class FQClassName <<value object>> {
    }

    class ProposalTemplateVersion <<value object>> <<id>> {
    }

    ProposalTemplate --> "1" FQClassName
    ProposalTemplate --> "1" ProposalTemplateVersion
}

package "<<aggregate>> Representative" {
    class Representative <<entity>> {
    }

    class Position <<value object>> {
    }

    class EmailAddress <<value object>> <<id>> {
    }

    Representative --> "1" Position
    Representative --> "1" EmailAddress
}

package "<<aggregate>> Customer" {
    class Customer <<entity>> <<root>> {
    }

    enum CustomerState <<value object>> {
    }

    enum CustomerType <<value object>> {
    }

    class Name <<value object>> {
    }

    class VAT <<value object>> <<id>> {
    }

    class Address <<value object>> {
    }

    Customer --> "1" VAT
    Customer --> "1" Address
    Customer --> "1" CustomerState
    Customer --> "1" CustomerType
    Customer --> "1" Name
}

package "<<aggregate>> ShowRequest" {
    class ShowRequest <<entity>> <<root>> {
    }

    class ShowRequestID <<value object>> <<id>> {
    }

    class Place <<value object>> {
    }

    class Date <<value object>> {
    }

    class Duration <<value object>> {
    }

    enum ShowRequestState <<value object>> {
    }

    ShowRequest --> "1" ShowRequestID
    ShowRequest --> "1" Date
    ShowRequest --> "1" Place
    ShowRequest --> "1" Duration
    ShowRequest --> "1" ShowRequestState
}

package "<<aggregate>> ShowProposal" {
    class ShowProposal <<entity>> <<root>> {
        - numberDrones : int
    }

    class ShowProposalID <<value object>> <<id>> {
    }

    class Location <<value object>> {
    }

    class Date <<value object>> {
    }

    class Duration <<value object>> {
    }

    class VideoFile <<value object>> {
    }

    class Language <<value object>> {
    }

    class Money <<value object>> {
    }

    enum ShowProposalState <<value object>> {
    }

    class DroneInShow <<value object>> {
        -quantity : int
    }

    class FigureInShow <<value object>> {
        -coordinateX : double
        -coordinateY : double
        -coordinateZ : double
    }

    class DroneModelName <<value object>> {
    }

    class FigureCode <<value object>> {
    }

    class SimulationLog <<entity>> {
    }

    enum SimulationResult <<value object>> {
    }

    ShowProposal --> "1" ShowProposalID
    ShowProposal --> "1" Date
    ShowProposal --> "1" Location
    ShowProposal --> "1" Duration
    ShowProposal --> "1" VideoFile
    ShowProposal --> "1" Money
    ShowProposal --> "1" Language
    ShowProposal --> "1" ShowProposalState
    ShowProposal --> "*" DroneInShow
    ShowProposal --> "*" FigureInShow
    DroneInShow --> "1" DroneModelName
    FigureInShow --> "1" FigureCode
    ShowProposal --> "*" SimulationLog
    SimulationLog --> "1" Date
    SimulationLog --> "1" SimulationResult
}

Customer "1" <-- "*" Representative : represents
ShowRequest "*" --> "1" Customer : requested by
ShowProposal "*" --> "1" ShowRequest : proposes
ShowProposal "*" --> "0..1" Representative : exclusive to

@enduml